--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 href="https://www.frontendmentor.io?ref=challenge"
                 target="_blank"
                 >Frontend Mentor</a
-            >. Coded by <a href="#">Your Name Here</a>.
+            >. Coded by <a href="https://github.com/Jim876633">Jim Huang</a>.
         </div>
     </body>
 </html>
