fix safari input outline rounded

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             class="pt-8 pb-20 px-5 text-center bg-gradient-to-bl from-linear_white_1 to-linear_white_2 md:w-3/5 md:text-left md:px-20 md:mt-20 md:flex md:flex-col md:justify-between"
         >
             <h1
-                class="text-3xl font-light uppercase text-red_light tracking-widest md:text-4xl"
+                class="text-3xl font-light uppercase text-red_light tracking-widest md:text-6xl"
             >
                 We're<span class="font-bold block text-black"
                     >coming <br />soon</span
                 >
             </h1>
-            <p class="text-red_light my-3">
+            <p class="text-red_light my-3 md:text-lg">
                 Hello fellow shoppers! We're currently building our new fashion
                 store. Add your email below to stay up-to-date with
                 announcements and our launch deals.
@@ -75,7 +75,7 @@
                 <input
                     type="email"
                     placeholder="Email Address"
-                    class="w-full outline outline-1 rounded-full outline-red_light placeholder:text-red_light placeholder:text-sm focus:outline-red_light py-2 px-5"
+                    class="w-full outline outline-1 rounded-full outline-red_light placeholder:text-red_light placeholder:text-sm focus:outline-red_light py-2 px-5 md:text-lg md:placeholder:text-lg md: py-3"
                 />
                 <button
                     type="submit"
@@ -85,7 +85,7 @@
                 </button>
             </form>
             <span
-                class="text-red text-left block ml-5 mt-3 text-sm invisible md:-mt-2 alert"
+                class="text-red text-left block ml-5 mt-3 text-sm invisible md:-mt-10 alert"
                 >alert text</span
             >
         </main>
