fix input focus outline

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <input
                     type="email"
                     placeholder="Email Address"
-                    class="w-full outline outline-1 rounded-full outline-red_light placeholder:text-red_light placeholder:text-sm focus:outline-red_light py-2 px-5 md:text-lg md:placeholder:text-lg md: py-3"
+                    class="w-full ring-1 rounded-full ring-red_light placeholder:text-red_light focus: outline-0 placeholder:text-sm py-2 px-5 md:text-lg md:placeholder:text-lg md: py-3"
                 />
                 <button
                     type="submit"
