modify article tag to div

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </p>
                 </div>
             </article>
-            <article class="main__reading">
+            <div class="main__reading">
                 <div class="reading-block">
                     <div class="reading-block--image">
                         <img
@@ -141,7 +141,7 @@
                         </p>
                     </div>
                 </div>
-            </article>
+            </div>
         </main>
         <footer class="footer">
             Challenge by
